# Viator

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
data/config/: ServerList.toml  cvars.cfg  defaultLayout.ini  rendererConfig.toml
data/shaders/: BasicTypes.h.glsl  Billboard.frag.glsl  BillboardSprite.frag.glsl  Color.h.glsl  DistanceFunctions.h.glsl  GlobalUniforms.h.glsl  Hash.h.glsl  Math.h.glsl  Resources.h.glsl
data/shaders/ao/rtao/: RayTracedAO.comp.glsl  Upscale.comp.glsl
data/shaders/ao/ssgi/: ModulateAlbedo.comp.glsl  ScreenSpaceGI.comp.glsl
data/shaders/auto_exposure/: ResolveLuminanceHistogram.comp.glsl
data/shaders/ddgi/: Common.shared.h  ConvolveIrradiance.comp.glsl  DebugProbes.frag.glsl  DebugProbes.vert.glsl  DebugProbesCommon.h.glsl  DownsampleProbeDepth.comp.glsl  ProbeCommon.shared.h  ResetNewProbes.comp.glsl  TraceProbes.comp.glsl
data/shaders/debug/: Debug.vert.glsl  DebugAabb.vert.glsl  DebugCommon.h.glsl  DebugRect.vert.glsl  VertexColor.frag.glsl
data/shaders/denoising/spatial/: Common.h.glsl  Modulate.comp.glsl
data/shaders/imgui/: imgui.frag.glsl
data/shaders/particles/: GarbageCollectParticles.comp.glsl  ParticleSpawn.comp.glsl  ParticleUpdate.comp.glsl  Particles.shared.h  RenderParticle.frag.glsl  RenderParticle.shared.h  RenderParticle.vert.glsl  WriteRenderParticleCommand.comp.glsl  WriteUpdateDIspatchParams.comp.glsl
data/shaders/post/: Grain.h.glsl  TonemapAndDither.comp.glsl  TonemapAndDither.shared.h
data/shaders/sky/: AerialPerspectiveLUT.comp.glsl  MultiscatteringLUT.comp.glsl  SkyParams.shared.h  SkyShared.h.glsl  SkyUtil.h.glsl  SkyViewLUT.comp.glsl  TransmittanceLUT.comp.glsl
data/shaders/volumetric/: ApplyVolumetricsDeferred.comp.glsl  CellLightingAndDensity.comp.glsl  Common.h  MarchVolume.comp.glsl
data/shaders/volumetric/clouds/: BeerShadowMap.h.glsl  BlurBeerShadowMap.comp.glsl  CloudDensity.h.glsl  CompositeClouds.comp.glsl  RayMarchedClouds.shared.h  RenderBeerShadowMap.comp.glsl  RenderRayMarchedClouds.comp.glsl  TemporalUpscaleClouds.comp.glsl  WeatherGpuParams.shared.h
data/shaders/voxels/: Forward.frag.glsl  Forward.h.glsl  Forward.vert.glsl  GBuffer.h.glsl  PerPixelPathtracer.comp.glsl  PerPixelPathtracer.shared.h  RayTracedVoxelsShadow.frag.glsl  RayTracedVoxelsShadowCommon.h.glsl  ShadeDeferred.comp.glsl  ShadeDeferred.shared.h  SimpleRayTracer.frag.glsl  SpelunkerPotionEffect.comp.glsl  TranslucentVoxels.comp.glsl  Voxels.h.glsl
scripts/: pfb.hexpat
src/: MathUtilities.cpp  MathUtilities.h  PCG.h  main.cpp
src/Client/: Editor.cpp  GpuMesh.h  Gui.cpp  GuiHelpers.cpp  GuiHelpers.h  Input.cpp  Input.h  PipelineManager.cpp  PipelineManager.h  PlayerAudio.cpp  PlayerAudio.h  PlayerHead.cpp  PlayerHead.h  Scheduler.cpp  Scheduler.h  VoxelRenderer.cpp  VoxelRenderer.h
src/Client/Fvog/: Buffer2.cpp  Buffer2.h  Device.cpp  Device.h  Pipeline2.cpp  Pipeline2.h  Rendering2.cpp  Rendering2.h  Shader2.cpp  Shader2.h  Texture2.cpp  Texture2.h
src/Client/Fvog/detail/: Common.h  VkFwd.h
src/Client/GUI/: CommandParser.cpp
src/Client/Gui/: CVarWidgets.cpp  CVarWidgets.h  CommandParser.h  Console.cpp  Console.h
src/Client/Gui/Debug/: GameWindow.cpp  GraphicsWindow.cpp
src/Client/Gui/Game/: GameGui.cpp
src/Client/ImGui/: imgui_impl_fvog.cpp  imgui_impl_fvog.h
src/Client/debug/: ForwardRenderer.cpp  ForwardRenderer.h
src/Client/techniques/: AutoExposure.cpp  AutoExposure.h  Bloom.cpp  Bloom.h  DDGI.cpp  DDGI.h  Particles.cpp  Particles.h  Sky.cpp  Sky.h
src/Client/techniques/ao/: RayTracedAO.cpp  RayTracedAO.h  ScreenSpaceGI.cpp  ScreenSpaceGI.h
src/Client/techniques/shadows/: CascadedShadowMaps.cpp  CascadedShadowMaps.h
src/Client/techniques/volumetric/: FroxelFog.cpp  FroxelFog.h  (+2 more)
src/Core/: Assert2.cpp  Assert2.h  Defer.h  Image.cpp  Image.h  Logging.cpp  Logging.h  Reflection.cpp  Reflection.h  ReflectionMacros.h  ReflectionMacrosInternal.h  Serialization.cpp  Serialization.h  StringUtilities.cpp  StringUtilities.h  Timer.cpp  Timer.h
src/Core/Container/: BitArray.cpp  BitArray.h  RingBuffer.cpp  RingBuffer.h
src/Core/Platform/: PlatformInit.cpp  PlatformInit.h  Sleep.cpp  Sleep.h
src/Fvog/: Buffer2.cpp  Device.cpp  Shader2.cpp
src/Fvog/detail/: VkFwd.h  VmaFwd.h
src/Game/: Assets.cpp  Assets.h  Audio.cpp  Audio.h  Block.cpp  Block.h  BlockFwd.h  CVar.cpp  CVar.h  CVarInternal.h  CommandParser.cpp  CommandParser.h  Commands.cpp  Commands.h  CoreComponents.h  Crafting.h  EntityPrefab.cpp  EntityPrefab.h  EntityPrefabFwd.h  Game.cpp  Game.h  Globals.cpp  Globals.h  HashGrid.h  Head.cpp  Head.h  IncompleteTypeDeleter.cpp  IncompleteTypeDeleter.h  Item.cpp  Item.h  ItemFwd.h  LRUCache.h  NpcDirector.cpp  NpcDirector.h  Pathfinding.cpp  Pathfinding.h  Prefab.cpp  Prefab.h  RegistryProxy.h  Scripting.cpp  (+18 more)
src/Game/Networking/: Client.cpp  Client.h  EnetFwd.h  Interface.cpp  Interface.h  RPC.cpp  RPC.h  RpcInfo.h  Server.cpp  Server.h  TestNetworking.cpp  ThreadSafeQueue.h
src/Game/Physics/: DebugRenderer.cpp  DebugRenderer.h  Physics.cpp  Physics.h  Shape.h  TwoLevelGridShape.cpp  TwoLevelGridShape.h
src/Game/Rendering/: Particle.h
src/Game/Systems/: CharacterAI.cpp  CharacterAI.h  CharacterController.cpp  CharacterController.h
src/Game/Voxel/: Grid.cpp  Grid.h  SketchyBuffer.cpp  SketchyBuffer.h
src/Game/World/: SurfaceBiome.cpp  SurfaceBiome.h  UndergroundBiome.cpp  UndergroundBiome.h  WorldGenHelpers.cpp  WorldGenHelpers.h
src/ImGui/: imgui_impl_fvog.cpp
src/Voxels/: Assert2.cpp  Assert2.h  Exception.h  Game.cpp  Game.h  Input.cpp  Logging.cpp  PlayerHead.cpp  Reflection.cpp  Reflection.h  Serialization.cpp  Serialization.h  SketchyBuffer.cpp  SketchyBuffer.h  TwoLevelGrid.cpp  TwoLevelGrid.h  VoxelRenderer.cpp  VoxelType.h
src/Voxels/Networking/: Client.cpp  Client.h  Interface.cpp  Interface.h  RPC.cpp  RPC.h  Server.cpp  Server.h  ThreadSafeQueue.h
src/Voxels/Physics/: Physics.cpp  Physics.h
src/debug/: ForwardRenderer.cpp
src/techniques/: AutoExposure.cpp  Bloom.cpp
src/techniques/ao/: RayTracedAO.cpp
(+2 files in other folders)
